docs/refs/script-api/server/1.5.0/worldafterevents.md
# `WorldAfterEvents`

> 文档版本：1.21.60.21

`WorldAfterEvents`类。script_api.@minecraft/server.worldafterevents.description

## 属性

/// define
`buttonPush`


///

```js
read-only buttonPush: ButtonPushAfterEventSignal;
```

/// html | div.result
//// define
`buttonPush`：[`ButtonPushAfterEventSignal`](./buttonpushaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.buttonpush.description


////

///


/// define
`entityDie`


///

```js
read-only entityDie: EntityDieAfterEventSignal;
```

/// html | div.result
//// define
`entityDie`：[`EntityDieAfterEventSignal`](./entitydieaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.entitydie.description


////

///


/// define
`entityHealthChanged`


///

```js
read-only entityHealthChanged: EntityHealthChangedAfterEventSignal;
```

/// html | div.result
//// define
`entityHealthChanged`：[`EntityHealthChangedAfterEventSignal`](./entityhealthchangedaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.entityhealthchanged.description


////

///


/// define
`entityHitBlock`


///

```js
read-only entityHitBlock: EntityHitBlockAfterEventSignal;
```

/// html | div.result
//// define
`entityHitBlock`：[`EntityHitBlockAfterEventSignal`](./entityhitblockaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.entityhitblock.description


////

///


/// define
`entityHitEntity`


///

```js
read-only entityHitEntity: EntityHitEntityAfterEventSignal;
```

/// html | div.result
//// define
`entityHitEntity`：[`EntityHitEntityAfterEventSignal`](./entityhitentityaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.entityhitentity.description


////

///


/// define
`entityHurt`


///

```js
read-only entityHurt: EntityHurtAfterEventSignal;
```

/// html | div.result
//// define
`entityHurt`：[`EntityHurtAfterEventSignal`](./entityhurtaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.entityhurt.description


////

///


/// define
`itemCompleteUse`


///

```js
read-only itemCompleteUse: ItemCompleteUseAfterEventSignal;
```

/// html | div.result
//// define
`itemCompleteUse`：[`ItemCompleteUseAfterEventSignal`](./itemcompleteuseaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.itemcompleteuse.description


////

///


/// define
`itemReleaseUse`


///

```js
read-only itemReleaseUse: ItemReleaseUseAfterEventSignal;
```

/// html | div.result
//// define
`itemReleaseUse`：[`ItemReleaseUseAfterEventSignal`](./itemreleaseuseaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.itemreleaseuse.description


////

///


/// define
`itemStartUse`


///

```js
read-only itemStartUse: ItemStartUseAfterEventSignal;
```

/// html | div.result
//// define
`itemStartUse`：[`ItemStartUseAfterEventSignal`](./itemstartuseaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.itemstartuse.description


////

///


/// define
`itemStartUseOn`


///

```js
read-only itemStartUseOn: ItemStartUseOnAfterEventSignal;
```

/// html | div.result
//// define
`itemStartUseOn`：[`ItemStartUseOnAfterEventSignal`](./itemstartuseonaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.itemstartuseon.description


////

///


/// define
`itemStopUse`


///

```js
read-only itemStopUse: ItemStopUseAfterEventSignal;
```

/// html | div.result
//// define
`itemStopUse`：[`ItemStopUseAfterEventSignal`](./itemstopuseaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.itemstopuse.description


////

///


/// define
`itemStopUseOn`


///

```js
read-only itemStopUseOn: ItemStopUseOnAfterEventSignal;
```

/// html | div.result
//// define
`itemStopUseOn`：[`ItemStopUseOnAfterEventSignal`](./itemstopuseonaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.itemstopuseon.description


////

///


/// define
`itemUse`


///

```js
read-only itemUse: ItemUseAfterEventSignal;
```

/// html | div.result
//// define
`itemUse`：[`ItemUseAfterEventSignal`](./itemuseaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.itemuse.description


////

///


/// define
`itemUseOn`


///

```js
read-only itemUseOn: ItemUseOnAfterEventSignal;
```

/// html | div.result
//// define
`itemUseOn`：[`ItemUseOnAfterEventSignal`](./itemuseonaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.itemuseon.description


////

///


/// define
`leverAction`


///

```js
read-only leverAction: LeverActionAfterEventSignal;
```

/// html | div.result
//// define
`leverAction`：[`LeverActionAfterEventSignal`](./leveractionaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.leveraction.description


////

///


/// define
`playerJoin`


///

```js
read-only playerJoin: PlayerJoinAfterEventSignal;
```

/// html | div.result
//// define
`playerJoin`：[`PlayerJoinAfterEventSignal`](./playerjoinaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.playerjoin.description


////

///


/// define
`playerLeave`


///

```js
read-only playerLeave: PlayerLeaveAfterEventSignal;
```

/// html | div.result
//// define
`playerLeave`：[`PlayerLeaveAfterEventSignal`](./playerleaveaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.playerleave.description


////

///


/// define
`playerSpawn`


///

```js
read-only playerSpawn: PlayerSpawnAfterEventSignal;
```

/// html | div.result
//// define
`playerSpawn`：[`PlayerSpawnAfterEventSignal`](./playerspawnaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.playerspawn.description


////

///


/// define
`pressurePlatePop`


///

```js
read-only pressurePlatePop: PressurePlatePopAfterEventSignal;
```

/// html | div.result
//// define
`pressurePlatePop`：[`PressurePlatePopAfterEventSignal`](./pressureplatepopaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.pressureplatepop.description


////

///


/// define
`pressurePlatePush`


///

```js
read-only pressurePlatePush: PressurePlatePushAfterEventSignal;
```

/// html | div.result
//// define
`pressurePlatePush`：[`PressurePlatePushAfterEventSignal`](./pressureplatepushaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.pressureplatepush.description


////

///


/// define
`projectileHitBlock`


///

```js
read-only projectileHitBlock: ProjectileHitBlockAfterEventSignal;
```

/// html | div.result
//// define
`projectileHitBlock`：[`ProjectileHitBlockAfterEventSignal`](./projectilehitblockaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.projectilehitblock.description


////

///


/// define
`projectileHitEntity`


///

```js
read-only projectileHitEntity: ProjectileHitEntityAfterEventSignal;
```

/// html | div.result
//// define
`projectileHitEntity`：[`ProjectileHitEntityAfterEventSignal`](./projectilehitentityaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.projectilehitentity.description


////

///


/// define
`targetBlockHit`


///

```js
read-only targetBlockHit: TargetBlockHitAfterEventSignal;
```

/// html | div.result
//// define
`targetBlockHit`：[`TargetBlockHitAfterEventSignal`](./targetblockhitaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.targetblockhit.description


////

///


/// define
`tripWireTrip`


///

```js
read-only tripWireTrip: TripWireTripAfterEventSignal;
```

/// html | div.result
//// define
`tripWireTrip`：[`TripWireTripAfterEventSignal`](./tripwiretripaftereventsignal.md)

- script_api.@minecraft/server.worldafterevents.tripwiretrip.description


////

///

